--- a/test/fixtures/app/health_units.yml
+++ b/test/fixtures/app/health_units.yml
@@ -5,7 +5,7 @@ one:
   city: MyString
   address: MyString
   phone: MyString
-  type: 
+  category: MyString
   token: MyString
 
 two:
@@ -13,5 +13,5 @@ two:
   city: MyString
   address: MyString
   phone: MyString
-  type: 
+  category: MyString
   token: MyString
