--- a/config/database.yml
+++ b/config/database.yml
@@ -21,9 +21,10 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   
-  host: <%= ENV['db.host'] %>
-  username: <%= ENV['db.username'] %>
-  password: <%= ENV['db.password'] %>
+  host: localhost
+  username: postgres
+  password: postgres
+  port: 5432
 
 development:
   <<: *default
